# AaronMR_Robotic_Stack

./: .gitignore
Document/AaronMR_Internship_Linz/: AaronMR_Internship_Linz.tex  Chapter1.tex  Chapter2.tex  Chapter3.tex  Chapter4.tex  Chapter5.tex  Chapter6.tex  coversheet.tex  tnf.eps  zardozDipl.sty
Document/DA-Vorlage TEX mit Vorschriften/: Kapitel1.aux  Kapitel1.tex  Kapitel2.aux  Kapitel2.tex  coversheet.aux  coversheet.tex  dreieck.eps  vorlagetemp.aux  vorlagetemp.dvi  vorlagetemp.lof  vorlagetemp.lot  vorlagetemp.out  vorlagetemp.ps  vorlagetemp.tcp  vorlagetemp.tex  vorlagetemp.toc  vorlagetemp.tps  wap_small.eps  zardozDipl.sty
Drivers/: stack.xml
Drivers/CB_TCP_RTAI/: CB_TCP_RTAI.cbp  CB_TCP_RTAI.depend  CB_TCP_RTAI.layout  Doxyfile  README  ValgrindOut.xml  borrar.yaml  cachegrind.out.4338  manifest.xml  parameters.h  sample.depend  sample.layout
Drivers/Laser_PLS200/: CMakeLists.txt  Laboratory.vcg  LaserPos  dataOut  mainpage.dox  manifest.xml  my_urdf.xml  test  test.vcg  test_laser  tf_data
Drivers/Laser_PLS200/include/PLS200/: PowerCube_Driver.h  common.c  common.h  parser.cpp  pls200_driver.h
Drivers/Laser_PLS200/launch/: laser.launch
Drivers/Laser_PLS200/lib/: libpcan.so.0.6
Drivers/Laser_PLS200/src/: PowerCube_Driver.cpp  filtro.cpp  odom_robot.cpp  pls200_driver.cpp  pls_cloud_node.cpp  pls_node.cpp  transmitest.cpp
Drivers/Motor_PowerCube/: mainpage.dox  manifest.xml
Other/Server_RTAI/: main.cpp  server.cbp  server.depend  server.layout
Robotic_extern/: stack.xml.bak
Robots/Robot1/: rviz_conf.vcg
tmp/: a.out  test.c  testSocket.c
tmp/AutoSerial/: maki.proto
tmp/Boost/: sample  sample.cpp  web page
tmp/ConfigFile/: example.cpp  example.inp  test.inp  tester
tmp/SHM/: Makefile  comStruc.asv  sSHM.asv  sSHM.c  sSHM.mexw32  testOfTestSHM.c  testSHM.mdl
tmp/chatSample/: WebPage  select.c  tcpserver.c
(+561 files in other folders)
