cmake_minimum_required(VERSION 2.4.6)
include($ENV{ROS_ROOT}/core/rosbuild/rosbuild.cmake)

# Set the build type.  Options are:
#  Coverage       : w/ debug symbols, w/o optimization, w/ code-coverage
#  Debug          : w/ debug symbols, w/o optimization
#  Release        : w/o debug symbols, w/ optimization
#  RelWithDebInfo : w/ debug symbols, w/ optimization
#  MinSizeRel     : w/o debug symbols, w/ optimization, stripped binaries
#set(ROS_BUILD_TYPE RelWithDebInfo)

rosbuild_init()

#set the default path for built executables to the "bin" directory
set(EXECUTABLE_OUTPUT_PATH ${PROJECT_SOURCE_DIR}/bin)
#set the default path for built libraries to the "lib" directory
set(LIBRARY_OUTPUT_PATH ${PROJECT_SOURCE_DIR}/lib)

#uncomment if you have defined messages
#rosbuild_genmsg()
#uncomment if you have defined services
#rosbuild_gensrv()

#common commands for building c++ executables and libraries
#rosbuild_add_library(${PROJECT_NAME} src/example.cpp)
#target_link_libraries(${PROJECT_NAME} another_library)
#rosbuild_add_boost_directories()
#rosbuild_link_boost(${PROJECT_NAME} thread)
#rosbuild_add_executable(example examples/example.cpp)
#target_link_libraries(example ${PROJECT_NAME})

rosbuild_add_library(pls200_driver src/pls200_driver.cpp)
rosbuild_add_library(PowerCube_Driver src/PowerCube_Driver.cpp)

rosbuild_add_executable(pls_node src/pls_node.cpp)
rosbuild_add_executable(pls_cloud_node src/pls_cloud_node.cpp)
rosbuild_add_executable(pls_filtro src/filtro.cpp)
rosbuild_add_executable(odom_robot src/odom_robot.cpp)
rosbuild_add_executable(transmitest src/transmitest.cpp)
target_link_libraries (pls_node pls200_driver)
target_link_libraries (transmitest PowerCube_Driver)
target_link_libraries (transmitest pcan)



